fix: align profile pictures with fixed aspect ratio, populate ConfigTextInputs with configuration if available

--- a/backend/api/static/styles.css
+++ b/backend/api/static/styles.css
@@ -75,17 +75,18 @@
 }
 
 .wiw-person-attrs-container {
+  gap: 1em;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
   border: none;
   margin-left: auto;
   margin-right: auto;
-  justify-content: space-between;
 }
 
 .wiw-person-attrs-col-1 {
   grid-column: 1 / 2;
+  text-align: end;
 }
 
 .wiw-person-attrs-col-2 {
@@ -110,6 +111,7 @@
   width: 100%;
 }
 .wiw-profile-picture {
+  aspect-ratio: 7 / 9;
   width: 100%;
   object-fit: cover;
 }
@@ -119,7 +121,7 @@
   margin-left: 1.5%;
   margin-right: 1.5%;
   width: 100%;
-  margin-top: auto;
+  margin-bottom: auto;
 }
 
 @media (min-width: 660px) {
